devops/k8s/simulator-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: simulator-cluster-ip-service
  namespace: ui-staging
spec:
  type: ClusterIP
  selector:
    component: simulator
  ports:
    - port: 80
      targetPort: 4444
