devops/k8s/web-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ui-web-cluster-ip-service
  namespace: ui-staging
spec:
  type: ClusterIP
  selector:
    component: ui-web
  ports:
    - port: 80
      targetPort: 80
